syntax = "proto3";

package memos.store;

option go_package = "gen/store";

message InboxMessage {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    MEMO_COMMENT = 1;
    VERSION_UPDATE = 2;
  }
  Type type = 1;
  optional int32 activity_id = 2;
}
